# chess_engine

./: .gitignore  CMakeLists.txt  README.md  instructions.txt
include/: constants.hpp
journal/: ch1-board_representation.aux  ch1-board_representation.tex  ch2-move_generation.aux  ch2-move_generation.tex  ch3-move_evaluation.aux  ch3-move_evaluation.tex  ch4-mcts.aux  ch4-mcts.tex  ch5-min_max.aux  ch5-min_max.tex  ch6-improvements.aux  ch6-improvements.tex  ch7-known_bugs.aux  ch7-known_bugs.tex  journal.aux  journal.fdb_latexmk  journal.fls  journal.tex  journal.toc
src/: Board.hpp
src/engine/: Board.cpp  Board.hpp  Game.hpp  LiChessUCI.cpp  LiChessUCI.hpp  MCnode.cpp  MCnode.hpp  UCIgame.cpp  algorithms.cpp  algorithms.hpp  evaluation.cpp  evaluation.hpp  evaluation_tables.hpp  move_generation.cpp
tests/: boardinfo.test.cpp  white_move_generation.test.cpp
